--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,20 +12,42 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
 
+        <!-- 女生模块页 - 指定NoActionBar主题 -->
+        <activity
+            android:name=".ui.modules.FemaleModulesActivity"
+            android:label="女生篇"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+
+        <!-- 男生模块页 - 指定NoActionBar主题 -->
+        <activity
+            android:name=".ui.modules.MaleModulesActivity"
+            android:label="男生篇"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+
+        <!-- 角色选择页 -->
+        <activity
+            android:name=".ui.character.CharacterSelectionActivity"
+            android:label="选择角色"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+
+        <!-- 主页 - 也改为NoActionBar，因为你的新首页可能不需要ActionBar -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
+        <!-- 聊天页 -->
         <activity
             android:name=".ui.chat.ChatActivity"
             android:windowSoftInputMode="adjustResize"
             android:exported="false" />
+
     </application>
 
 </manifest>
