--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+文件路径：app/src/main/AndroidManifest.xml
+文件名：AndroidManifest.xml
+文件类型：Manifest（应用清单）
+状态：✅ 完整版（可直接使用）
+创建日期：2025-10-15
+最后修改：2025-10-28
+作者：Claude
+
+功能说明：
+1. 定义应用权限（网络访问）
+2. 注册所有Activity
+3. 配置应用主题和元数据
+4. 设置Activity导航关系
+
+注意：
+- package名称需要替换为你的实际包名
+- 如果有其他Activity，请一并添加
+-->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.nativechatdemo">
+
+    <!-- ========================================
+         权限声明
+         ======================================== -->
+
+    <!-- OpenAI API需要网络访问权限 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!-- 网络状态检查权限（可选，用于检测网络连接） -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <!-- 写入外部存储权限（如果需要导出聊天记录） -->
+    <!-- <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+         android:maxSdkVersion="28" /> -->
+
+    <!-- 读取外部存储权限（如果需要导入文件） -->
+    <!-- <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+         android:maxSdkVersion="32" /> -->
 
     <application
         android:allowBackup="true"
@@ -10,65 +49,192 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
+        android:theme="@style/Theme.NativeChatDemo"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
-        <activity
-            android:name=".ui.modules.FemaleModulesActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <!-- ========================================
+             说明：android:usesCleartextTraffic="true"
+             允许HTTP明文流量（开发阶段使用）
+             生产环境建议移除，使用HTTPS
+             ======================================== -->
 
-        <activity
-            android:name=".ui.modules.MaleModulesActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
-
-        <activity
-            android:name=".ui.character.CharacterSelectionActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
-
-        <activity
-            android:name=".ui.review.ReviewActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
-
-        <activity
-            android:name=".ui.radar.RadarMenuActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
-
-        <activity
-            android:name=".ui.conversation.ConversationLearnActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
-
-        <activity
-            android:name=".ui.conversation.ConversationPracticeActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
-
+        <!-- ========================================
+             MainActivity - 应用主界面
+             ======================================== -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:label="@string/app_name"
+            android:theme="@style/Theme.NativeChatDemo">
+
+            <!-- 启动器入口 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
+        <!-- ========================================
+             CharacterConfigActivity - 角色配置界面
+             ======================================== -->
+        <activity
+            android:name=".ui.character.CharacterConfigActivity"
+            android:exported="false"
+            android:label="@string/character_config_title"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/Theme.NativeChatDemo"
+            android:windowSoftInputMode="adjustResize">
+
+            <!-- 返回导航 -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+
+        <!-- ========================================
+             ChatActivity - 聊天界面
+             ======================================== -->
         <activity
             android:name=".ui.chat.ChatActivity"
-            android:windowSoftInputMode="adjustResize"
             android:exported="false"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+            android:label="@string/chat_loading"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/Theme.NativeChatDemo"
+            android:windowSoftInputMode="adjustResize">
 
-        <activity
-            android:name=".custom.CustomPartnerMenuActivity"
-            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"/>
+            <!-- 返回导航 -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
 
-        <activity
-            android:name=".custom.CustomTraitInputActivity"
-            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"/>
+        <!-- ========================================
+             其他Activity（如果有，请添加在这里）
+             ======================================== -->
 
+        <!-- 示例：设置界面 -->
+        <!--
         <activity
-            android:name=".custom.ConfessionTestActivity"
-            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"/>
+            android:name=".ui.settings.SettingsActivity"
+            android:exported="false"
+            android:label="@string/settings"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/Theme.NativeChatDemo">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        -->
+
+        <!-- 示例：角色列表界面 -->
+        <!--
+        <activity
+            android:name=".ui.character.CharacterListActivity"
+            android:exported="false"
+            android:label="我的角色"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/Theme.NativeChatDemo">
+
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        -->
 
     </application>
 
 </manifest>
+
+<!--
+========================================
+📋 配置说明
+========================================
+
+1. 权限：
+   - INTERNET: OpenAI API调用需要
+   - ACCESS_NETWORK_STATE: 检查网络连接（可选）
+   - 其他权限根据需要添加
+
+2. android:usesCleartextTraffic="true"：
+   - 开发阶段允许HTTP
+   - 生产环境建议移除，只使用HTTPS
+   - 或者配置network_security_config.xml
+
+3. android:windowSoftInputMode="adjustResize"：
+   - 键盘弹出时调整布局
+   - 聊天界面和配置界面必需
+
+4. parentActivityName：
+   - 定义返回导航关系
+   - 工具栏返回按钮自动显示
+
+5. android:exported：
+   - MainActivity: true（启动入口）
+   - 其他Activity: false（不允许外部启动）
+
+========================================
+🔒 安全配置（可选）
+========================================
+
+如果要限制HTTP流量，创建：
+res/xml/network_security_config.xml
+
+<?xml version="1.0" encoding="utf-8"?>
+<network-security-config>
+    <domain-config cleartextTrafficPermitted="false">
+        <domain includeSubdomains="true">api.openai.com</domain>
+    </domain-config>
+</network-security-config>
+
+然后在 <application> 中添加：
+android:networkSecurityConfig="@xml/network_security_config"
+
+========================================
+📦 数据备份规则（可选）
+========================================
+
+res/xml/backup_rules.xml（Android 12+）：
+
+<?xml version="1.0" encoding="utf-8"?>
+<full-backup-content>
+    <include domain="sharedpref" path="."/>
+    <exclude domain="sharedpref" path="openai_config.xml"/>
+</full-backup-content>
+
+res/xml/data_extraction_rules.xml（Android 12+）：
+
+<?xml version="1.0" encoding="utf-8"?>
+<data-extraction-rules>
+    <cloud-backup>
+        <include domain="sharedpref" path="."/>
+        <exclude domain="sharedpref" path="openai_config.xml"/>
+    </cloud-backup>
+</data-extraction-rules>
+
+说明：
+- 备份SharedPreferences
+- 排除API Key配置（安全考虑）
+
+========================================
+💡 常见问题
+========================================
+
+Q1: 找不到Activity类
+A: 检查package名称是否正确，确保与实际包名一致
+
+Q2: 网络请求失败
+A: 确认已添加INTERNET权限
+
+Q3: 键盘遮挡输入框
+A: 确保设置了 windowSoftInputMode="adjustResize"
+
+Q4: 返回按钮不显示
+A: 确保设置了 parentActivityName 和 meta-data
+
+Q5: HTTP请求被阻止
+A: 检查 usesCleartextTraffic 或配置 network_security_config
+
+========================================
+-->
